# Stash

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark.py
src/Stash/: __init__.py  main.py
src/Stash/Cache/: __init__.py  cache_registry.py  memoization.py
src/Stash/Classes/: __init__.py  cacheconfig.py  fieldinfo.py  slots_class.py  tuplex_class.py
src/Stash/Errors/: __init__.py  exceptions.py
src/Stash/Utils/: __init__.py  dynamic.py  utility.py
tests/: test_immutability.py  test_mutability.py  test_preservation.py  test_suite.py  test_variables.py
