[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash"
version = "0.0.1"
description = "A memory optimization tool designed to lessen Python class overhead"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    {name = "HysingerDev", email = "HysingerDev@gmail.com"}
]
requires-python = ">=3.8"

keywords = [
    "slots",
    "memory optimization",
    "performance",
    "monitoring",
    "python",
    "decorator",
    "class",
    "freeze",
    "immutability",
    "interning",
    "lightweigh classes"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: System :: System Administration"

]

dependencies = []

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = ""
Documentation = ""
Source = ""
Issues = ""